--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
         <div class="navbar__s3">
 
             <p>Courses</p>
-            <p>My Learning</p>
+            <!-- <p>My Learning</p> -->
+            <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>You did not purchase anything yet</p>
+                </div>
+            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
@@ -51,6 +57,10 @@
 
     <div class="sale-image">
         <img src="./images/sale-image.jpg" alt="" />
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale 24 hours to save</h2>
+            <p>Get the top courses for just 499. Just one day to save.</p>
+        </div>
     </div>
 
     <!-- recommended -->
