--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <i class="fa-solid fa-user"></i>
         </div>
 
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
     </div>
 
     <!-- categories -->
